--- a/time/2_Simulationszeit.tex
+++ b/time/2_Simulationszeit.tex
@@ -14,10 +14,10 @@ bottom={3.5cm},
 }
 
 \begin{document}
-\title{PS Einführung Simulation}
-\subtitle{Simulationszeit (Darstellung, Funktionalität, \\ Scheduling von Ereignissen/Prozessen)}
+\title{Simulationszeit \\ (Darstellung, Funktionalität, \\ Scheduling von Ereignissen/Prozessen)}
+\subtitle{PS Einführung Simulation}
 \author{Dario Hornsteiner, Sofia Bonini, Sabine Hasenleithner}
-\institute{Universitaet Salzburg, 5. Mai 2021}
+\institute{Universität Salzburg, 5. Mai 2021}
 \maketitle
 
 \section{Allgemeine Erklärung}
